src/html/popup.css
/* ... */
.aboutButton:hover {
    background-color: #7D5BBE;
    cursor: pointer;
}

.buttonContainer {
    height: 40px;
}

.contactInfo {
    color: #17141F;
    font-size: 14px;
    padding-bottom: 5px;
}

.content {
    /*display: inline-block;*/
    position: relative;
    /*float: left;*/
}

.content.hidden {
    visibility: hidden;
    opacity: 0;
    transition: visibility 0.3s linear, opacity 0.3s ease;
}

.content.stream {
    width: 273px;
    height: 171px;
}

.content.game {
    width: 136px;
    height: 220px;
}

.content.channel {
    width: 182px;
    height: 182px;
}

.contentBack {
    position: absolute;
}

.contentBack.stream {
    left: 5px;
    top: 5px;
    width: 265px;
    height: 149px;
    background-size: contain;
}

.contentBack.game {
    left: 5px;
    top: 5px;
    width: 130px;
    height: 183px;
    background-size: 130px 183px;
}

.contentBack.channel {
    left: 5px;
    top: 5px;
    width: 174px;
    height: 174px;
    background-size: 174px 174px;
}

.bottomText {
    position: absolute;
    color: #6e6779;
    text-overflow: ellipsis;
    overflow: hidden;
}

.bottomText.stream {
    top: 154px;
    left: 5px;
    width: 265px;
    height: 14px;
    white-space: nowrap;
}

.bottomText.gameTop {
    top: 190px;
    left: 5px;
    width: 136px;
    height: 14px;
    color: #19171C;
    white-space: nowrap;
}

.displayName .tooltip {
    left: 10px;
    top: 170px;
}

.displayName:hover .tooltip {
    visibility: visible;
}

.gameTitle .tooltip {
    left: 10px;
    top: 206px;
}

.gameTitle:hover .tooltip {
    visibility: visible;
}

.bottomText.gameBottom {
    top: 204px;
    left: 5px;
    width: 136px;
    height: 14px;
    white-space: nowrap;
}

.hoverBack {
    position: absolute;
    width: 265px;
    height: 18px;
    left: 0px;
    background-color: black;
    opacity: 0.6;
    transition: width 0.3s ease, height 0.3s ease, opacity 0.3s ease;
}

.contentBack.stream:hover .hoverBack {
    width: 265px;
    height: 149px;
}

.contentBack.channel .hoverBack {
    width: 174px;
    height: 20px;
}

.contentBack.channel:hover .hoverBack {
    height: 174px;
}

.contentBack.game .hoverBack {
    width: 130px;
    height: 183px;
    left: 0px;
    opacity: 0;
}

.contentBack.game:hover .hoverBack {
    opacity: 0.4;
}

.clickBack:hover {
    cursor: pointer;
}

.clickBack.game {
    position: absolute;
    width: 130px;
    height: 183px;
}

.clickBack.stream {
    position: absolute;
    width: 265px;
    height: 149px;
}

.clickBack.stream .tooltip {
    width: 235px;
    top: 55px;
}

.clickBack.game .tooltip {
    width: 130px;
    top: 62px;
}

.clickBack:hover .tooltip {
    visibility: visible;
}

.uptimeIcon {
    display: inline-block;
    margin-top: -1px;
    margin-right: 4px;
    width: 16px;
    height: 16px;
    background-image: url(../assets/images/uptime.png);
    opacity: 0.9;
    float: left;
}

.uptimeIcon:hover {
    opacity: 1;
}

.uptimeIcon:hover .tooltip {
    visibility: visible;
}

.uptimeIcon .tooltip {
    top: 20px;
    left: 90px;
}

.uptime {
    margin-top: -58px;
    margin-right: 5px;
    height: 16px;
    opacity: 0.9;
    float: right;
}

.cornerLogo {
    position: absolute;
    width: 43px;
    height: 43px;
    border-width: 2px 2px 0px 0px;
    border-color: white;
    border-style: solid;
    top: 109px;
    left: 5px;
    background-size: 43px 43px;
    background-color: #FAF9FA;
    opacity: 0.9;
}

.cornerLogo:hover {
    opacity: 1;
}

.cornerLogo:hover .tooltip {
    visibility: visible;
}

.cornerLogo .tooltip {
    top: 44px;
    left: 0px;
}

.cornerGame {
    position: absolute;
    width: 38px;
    height: 52px;
    border-width: 2px 0px 0px 2px;
    border-color: white;
    border-style: solid;
    top: 100px;
    left: 230px;
    background-size: 38px 52px;
    background-color: #FAF9FA;
    opacity: 0.9;
}

.cornerGame.channel {
    left: 139px;
    top: 125px;
}

.cornerGame:hover {
    cursor: pointer;
    opacity: 1;
}

.cornerGame:hover .tooltip {
    visibility: visible;
}

.cornerGame .tooltip {
    top: 53px;
    left: -100px;
}

.channelName {
    position: absolute;
    width: 162px;
    height: 20px;
    top: 3px;
    left: 6px;
    color: white;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: none;
    font-weight: bold;
    text-align: center;
}

.hideUntilHover {
    visibility: hidden;
    opacity: 0;
}

.contentBack:hover .hideUntilHover {
    visibility: visible;
    opacity: 1;
}

.status {
    position: absolute;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    word-wrap: break-word;
    -moz-user-select: text;
}

.status.stream {
    width: 190px;
    height: 16px;
    left: 2px;
    top: 2px;
    transition: all 0.3s ease;
}

.contentBack.stream:hover .status {
    height: 108px;
    white-space: inherit;
}

.status.channel {
    width: 126px;
    height: 0px;
    left: 6px;
    top: 18px;
    transition: height 0.3s ease;
}

.contentBack.channel:hover .status {
    height: 122px;
    white-space: inherit;
}

.topName {
    width: 162px;
    height: 18px;
    left: 6px;
    top: 2px;
    position: absolute;
    text-overflow: ellipsis;
    overflow: hidden;
    text-align: center;
}

.topName .tooltip {
    left: 11px;
    top: 15px;
}

.topName:hover {
    height: 174px;
}

.topName:hover .tooltip {
    visibility: visible;
}

.contentButton {
    position: relative;
    width: 30px;
    height: 30px;
    background-color: #6441A4;
}

.contentButton:hover {
    background-color: #7D5BBE;
    cursor: pointer;
}

.contentButton.noAccess {
    opacity: 0.5;
}

.contentButton.noAccess:hover {
    opacity: 1;
    cursor: not-allowed;
}

.contentButton.bottom.stream .tooltip {
    top: 31px;
    left: -45px;
}

.contentButton.bottom.follow.stream .tooltip {
    top: 31px;
    left: -75px;
}

.contentButton.bottom.unfollow.stream .tooltip {
    top: 31px;
    left: -75px;
}
/* ... */

